istio-migration/pve-virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: pve
  namespace: networking
  annotations:
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  hosts: ["pve.${SECRET_DOMAIN}"]
  gateways: [istio-ingress/external-gateway]
  http:
    - route:
        - destination:
            host: pve.networking.svc.cluster.local
            port:
              number: 8006
      tls:
        mode: SIMPLE
        sniHosts: ["pve.${SECRET_DOMAIN}"]
